# Iris

./: .gitignore  Doxyfile  README.md  iris.cabal  meson.build
.github/workflows/: build.yml
app/: Main.hs  main.cpp  meson.build
core/testing/: assert.is
data/errors/error_codes/: E0002.md  E0100.md  E0201.md  E0202.md  E0204.md  E0205.md  E0207.md  E0209.md  E0210.md  E0212.md  E0214.md  E0301.md
examples/: main.is  test.is
include/Iris/: cli.hpp  options.hpp
include/Iris/Backend/: compiler.hpp  module.hpp
include/Iris/Common/: error.hpp  error_codes.hpp  meson.build  span.hpp  utils.hpp
include/Iris/Debug/: printer.hpp
include/Iris/Frontend/: ast.hpp  lexer.hpp  parser.hpp  resolved_info.hpp  resolver.hpp  scheme.hpp  token.hpp  type.hpp  type_env.hpp  typechecker.hpp  unifier.hpp
include/Iris/Runtime/: builtins.hpp  opcodes.hpp  value.hpp  vm.hpp
scripts/: format.sh  gen_errors.py  meson.build
src/: cli.cpp  compiler.cpp  error.cpp  lexer.cpp  main.cpp  meson.build  module.cpp  parser.cpp  printer.cpp  resolver.cpp  value.cpp  vm.cpp
src/Backend/: compiler.cpp  module.cpp
src/Common/: error.cpp
src/Debug/: printer.cpp
src/Frontend/: lexer.cpp  parser.cpp  resolver.cpp  scheme.cpp  type.cpp  type_env.cpp  typechecker.cpp  unifier.cpp
src/Iris/: CLI.hs
src/Iris/Common/: Span.hs
src/Iris/Core/: AST.hs  Infer.hs  Loader.hs  Module.hs  Types.hs  Unify.hs
src/Iris/Frontend/: Lexer.hs  Parser.hs  Token.hs
src/Runtime/: value.cpp  vm.cpp
src/errors/error_codes/: E0003.md  E0101.md  E0200.md  E0203.md  E0206.md  E0208.md  E0211.md  E0213.md  E0300.md
src/include/: ast.hpp  builtins.hpp  cli.hpp  compiler.hpp  error.hpp  error_codes.hpp  lexer.hpp  module.hpp  opcodes.hpp  options.hpp  parser.hpp  printer.hpp  resolved_info.hpp  resolver.hpp  span.hpp  token.hpp  utils.hpp  value.hpp  version.hpp.in  vm.hpp
