cabal-version:   3.0
name:            iris
version:         0.1.0.0

-- synopsis:
-- description:
license:         GPL-3.0-only
license-file:    LICENSE
author:          Peter Griffin
maintainer:      codezz-ops@protonmail.com

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:  Iris.CLI
  other-modules:
    Iris.Common.Span
    Iris.Core.AST
    Iris.Frontend.Lexer
    Iris.Frontend.Parser
    Iris.Frontend.Token
    Paths_iris

  default-language: Haskell2010
  build-depends:
    , base
    , containers
    , directory
    , filepath
    , megaparsec
    , mtl
    , optparse-applicative
    , parser-combinators
    , text
    , unordered-containers
    , transformers

executable iris
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , iris

  hs-source-dirs:   app
  default-language: Haskell2010
